[Subida del codigo] index.html: □ Se creo la carta, el numero central y las 2 figuras. □ Se asociaron el app.js y el style.css. □ Se añadieron las clases de bootstrap. □ Se añadió el boton con un onclick para recargar la pagina. □ Se añandieron unos input para añadir la altura y la anchura de la carta (Falta la funcionalidad).
style.css:
□ Se añadió fondo gris.
□ Atributos a la carta, tamaño a las figuras y la figura de abajo girada 180 grados.
□ Negrita al numero y tamaño.

app.js:
□ Arrays de string para las figuras y los numeros.
□ Random para sacar un objeto de ese string.
□ Asignamos ese valor random a una constante.
□ Cambiamos el HTML por la constante random.
□ Constantes para cambiar los colores de las figuras de la carta.
□ Condicional para cambiar los diamantes y los corazones a rojo.
□ Cuenta regresiva de 10 segundos para recargar la pagina.

--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,12 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background: grey;
+}
+
+.card {
+  display: inline-block;
+  margin: auto;
+  height: 400px;
+  width: 320px;
+}
