[Se sube el codigo listo] index.html: □ Se creo la carta, el numero central y las 2 figuras. □ Se asociaron el app.js y el style.css. □ Se añadieron las clases de bootstrap. □ Se añadió el boton con un onclick para recargar la pagina. □ Se añandieron unos input para añadir la altura y la anchura de la carta. □ Tambien un boton con un onclick con la funcion del app.js
style.css:
□ Se añadió fondo gris.
□ Atributos a la carta, tamaño a las figuras y la figura de abajo girada 180 grados.
□ Negrita al numero y tamaño.

app.js:
□ Arrays de string para las figuras y los numeros.
□ Random para sacar un objeto de ese string.
□ Asignamos ese valor random a una constante.
□ Cambiamos el HTML por la constante random.
□ Constantes para cambiar los colores de las figuras de la carta.
□ Condicional para cambiar los diamantes y los corazones a rojo.
□ Nueva funcion que utlizare en un onclick en el Html
□ Constantes para agarrar el id del Html
□ Cambiamos la altura y la anchura en px
□ Cuenta regresiva de 10 segundos para recargar la pagina.

--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,23 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
-
 body {
   background: grey;
 }
 
 .card {
-  display: inline-block;
   margin: auto;
-  height: 400px;
+  height: 420px;
   width: 320px;
+}
+
+.top-figura {
+  font-size: 65px;
+}
+
+.number {
+  font-size: 75px;
+  font-weight: bold;
+}
+
+.bottom-figura {
+  transform: rotate(180deg);
+  font-size: 65px;
 }
